...
            "state": "translated",
            "value": "历史记录"
          }
        }
      }
    },
    "Close": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Закрыть"
          }
...
            "state": "translated",
            "value": "询问有关此翻译的问题…"
          }
        }
      }
    },
    "Explain": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Объяснить"
          }
...
            "state": "translated",
            "value": "此设备不支持 %@ 的听写。"
          }
        }
      }
    },
    "Add to cards": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "В карточки"
          }
...
            "state": "translated",
            "value": "添加于 %@"
          }
        }
      }
    },
    "Study": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Учить"
          }
...
            "state": "translated",
            "value": "学习"
          }
        }
      }
    },
    "Forgot": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Забыл"
          }
...
            "state": "translated",
            "value": "忘记了"
          }
        }
      }
    },
    "Remember": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Помню"
          }
...
